--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,9 +44,9 @@
 
 <body>
 <nav id="slide-menu">
-  <h1>ICEPR'16</h1>
+  <h1>ICEPR'17</h1>
   <ul>
-    <li><a href="{{site.baseurl}}/">Home</a></li>
+    <li><a href="/">Home</a></li>
     <li><a href="../papers">Paper Submissions</a></li>
     <li><a href="../program">Program</a></li>
     <li><a href="../dates">Important Dates</a></li>
@@ -70,8 +70,8 @@
     <div class="mobile">
       {% include nav.html %}
         <div class="bg">
-          <h1>6<sup>th</sup> International Conference on Environmental<br>Pollution and Remediation (ICEPR'16)</h1>
-          <p class="subhead">August 19 - 20, 2016 | Budapest, Hungary</p>
+          <h1>7<sup>th</sup> International Conference on Environmental<br>Pollution and Remediation (ICEPR'17)</h1>
+          <p class="subhead">June 7 - 8, 2016 | Rome, Italy</p>
 
           <a href="../papers" class="bg-link">Paper Submission</a> <p class="dot">&middot;</p> <a href="../dates" class="bg-link">Important Dates</a> <p class="dot">&middot;</p> <a href="../registration" class="bg-link">Registration</a>
 
@@ -96,8 +96,8 @@
         </div>
 
         <div class="bg">
-          <h1>6<sup>th</sup> International Conference on Environmental<br>Pollution and Remediation (ICEPR'16)</h1>
-          <p class="subhead">August 19 - 20, 2016 | Budapest, Hungary</p>
+          <h1>7<sup>th</sup> International Conference on Environmental<br>Pollution and Remediation (ICEPR'17)</h1>
+          <p class="subhead">June 7 - 8, 2016 | Rome, Italy</p>
 
           <a href="../papers" class="bg-link">Paper Submission</a> <p class="dot">&middot;</p> <a href="../dates" class="bg-link">Important Dates</a> <p class="dot">&middot;</p> <a href="../registration" class="bg-link">Registration</a>
 
@@ -138,7 +138,6 @@
 </div>
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-  <script src="../js/jquery.nicescroll.min.js"></script>
   <script type="text/javascript" src="../js/jquery.calendario.js"></script>
     <script type="text/javascript" src="../js/data.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
