--- a/_includes/css/general.css
+++ b/_includes/css/general.css
@@ -336,6 +336,11 @@ th {
 	border-bottom: #349B54 1px solid;
 }
 
+.keynoteIndex {
+    height: 200px;
+    padding-right: 1em;
+}
+
 /* HEADER & NAVIGATION */
 h1 {
 	font-family: 'Lato', sans-serif;
