--- a/_includes/announcement.html
+++ b/_includes/announcement.html
@@ -4,9 +4,9 @@
       <p class="bold">ICEPR 2017:</p>
       <p class="body">ICEPR 2017 will  be held in Rome, Italy on June 6 - 8, 2017.</p>
       
-      <p class="bold">SMAL Workshop</p>
+      <p class="bold">SNAL Workshop</p>
 
-      <p class="body">International ASET Inc. is proud to present EU funded <a href="http://www.itn-snal.net" target="_blank">Initial Training Network SNAL</a> as the organizer of a dedicated workshop for the 3rd World Congress on New Technologies (NewTech'17)</p>
+      <p class="body">International ASET Inc. is proud to present EU funded <a class="body-link" href="http://www.itn-snal.net" target="_blank">Initial Training Network SNAL</a> as the organizer of a dedicated workshop for the 3rd World Congress on New Technologies (NewTech'17)</p>
 
       <cenet><p class="body" style="text-align: center!important;"><b>Coordinator of SNAL and organizer of the workshop:</b> Dr. Vladimir Baulin,<i>Universitat Rovira i Virgili, Spain</i></p>
       <cenet><p class="body" style="text-align: center!important;"><b>Topic of Workshop:</b> <i>Smart Nano-objects for Alteration of Lipid bilayers (SNAL)</i></p>
