--- a/_includes/css/general.css
+++ b/_includes/css/general.css
@@ -1055,6 +1055,9 @@ nav#slide-menu {
 right: -192px;
 max-width: 192px;
 }
+.left {
+     margin-right: 2%;
+	 padding-bottom: 12px;
 
 body.menu-active div#content {
 right: 192px;
@@ -1490,4 +1493,32 @@ footer form {
 	.cbp-af-header nav a {
   font-size: 1em!important;
 }
+}
+
+/*contact us*/
+.half {
+  float: left;
+  width: 48%;
+  margin-bottom: 1em;
+}
+.right { width: 50%; }
+.left {
+     margin-right: 2%; 
+}
+.full { width: 100%; }
+@media (max-width: 600px) {
+  .half {
+     width: 100%; 
+     float: none;
+     margin-bottom: 0; 
+  }
+}
+/* Clearfix */
+.cf:before,
+.cf:after {
+    content: " "; /* 1 */
+    display: table; /* 2 */
+}
+.cf:after {
+    clear: both;
 }
