--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
 
 <body>
 <nav id="slide-menu">
-  <h1>ICEPR'17</h1>
+  <h1>ICEPR'18</h1>
   <ul>
     <li><a href="/">Home</a></li>
     <li><a href="../papers">Paper Submissions</a></li>
@@ -70,8 +70,8 @@
     <div class="mobile">
       {% include nav.html %}
         <div class="bg">
-          <h1>7<sup>th</sup> International Conference on Environmental<br>Pollution and Remediation (ICEPR'17)</h1>
-          <p class="subhead">June 6 - 8, 2017 | Rome, Italy</p>
+          <h1>8<sup>th</sup> International Conference on Environmental<br>Pollution and Remediation (ICEPR'18)</h1>
+          <p class="subhead">August 19 - 21, 2018 | Madrid, Spain</p>
 
           <a href="../papers" class="bg-link">Paper Submission</a> <p class="dot">&middot;</p> <a href="../dates" class="bg-link">Important Dates</a> <p class="dot">&middot;</p> <a href="../registration" class="bg-link">Registration</a>
 
@@ -85,7 +85,7 @@
   </div>
 </div>
 </div>
-<br><p class="body" style="text-align:center!important;">ICEPR'17 is part of the <b>3<sup>rd</sup> World Congress on New Technologies (NewTech'17)</b>. For more information about the congress, please visit the website here: <a href="http://2017.newtechcongress.com/" class="body-link">www.2017.newtechcongress.com</a> or view our <a href="../NEWTECH17_CFP.pdf" class="body-link">congress flyer</a>.</p>
+<br><p class="body" style="text-align:center!important;">ICEPR'18 is part of the <b>4<sup>th</sup> World Congress on New Technologies (NewTech'18)</b>. For more information about the congress, please visit the website here: <a href="http://2018.newtechcongress.com/" class="body-link">www.2018.newtechcongress.com</a> <!-- or view our <a href="../NEWTECH17_CFP.pdf" class="body-link">congress flyer</a> -->.</p>
         </div>
     </div>
 
@@ -97,8 +97,8 @@
         </div>
 
         <div class="bg">
-          <h1>7<sup>th</sup> International Conference on Environmental<br>Pollution and Remediation (ICEPR'17)</h1>
-          <p class="subhead">June 6 - 8, 2017 | Rome, Italy</p>
+          <h1>8<sup>th</sup> International Conference on Environmental<br>Pollution and Remediation (ICEPR'18)</h1>
+          <p class="subhead">August 19 - 21, 2018 | Madrid, Spain</p>
 
           <a href="../papers" class="bg-link">Paper Submission</a> <p class="dot">&middot;</p> <a href="../dates" class="bg-link">Important Dates</a> <p class="dot">&middot;</p> <a href="../registration" class="bg-link">Registration</a>
 
@@ -112,7 +112,7 @@
   </div>
 </div>
 </div>
-<br><p class="body" style="text-align:center!important; color: #FFF!important;">ICEPR'17 is part of the <b>3<sup>rd</sup> World Congress on New Technologies (NewTech'17)</b>.<br>For more information about the congress, please visit the website here: <a href="http://2017.newtechcongress.com/" class="body-link">www.2017.newtechcongress.com</a> or view our <a href="../NEWTECH17_CFP.pdf" class="body-link">congress flyer</a>.</p>
+<br><p class="body" style="text-align:center!important; color: #FFF!important;">ICEPR'18 is part of the <b>4<sup>th</sup> World Congress on New Technologies (NewTech'18)</b>.<br>For more information about the congress, please visit the website here: <a href="http://2018.newtechcongress.com/" class="body-link">www.2018.newtechcongress.com</a> <!-- or view our <a href="../NEWTECH17_CFP.pdf" class="body-link">congress flyer</a> -->.</p>
         </div>
         </div> 
       </div>
@@ -130,7 +130,7 @@
 
   <div class="unit unit-s-1 unit-m-1-3-1 unit-l-1-3-1">
   <div class="unit-spacer">
-    {% include calendar.html %}
+    {% include side-buttons.html %}
     {% include upcoming-dates.html %}
   </div>
   </div>
