--- a/_includes/announcement.html
+++ b/_includes/announcement.html
@@ -17,8 +17,8 @@
       <p class="body">More information to follow; we greatly appreciate your patience!</p-->
    
 
-      <p class="bold">Poster Board Dimensions:</p>
-      <p class="body">Authors presenting via poster boards are to be informed that poster boards are 100 cm height and 90 cm width.</p>
+      <!-- <p class="bold">Poster Board Dimensions:</p>
+      <p class="body">Authors presenting via poster boards are to be informed that poster boards are 100 cm height and 90 cm width.</p> -->
 
 
     </div>       
