--- a/_includes/upcoming-dates.html
+++ b/_includes/upcoming-dates.html
@@ -4,7 +4,7 @@
 <div class="unit unit-s-1 unit-m-1-4 unit-l-1-4">
 	<div class="date">
 		 <!-- <div class="past">Dec. 1, 2016</div> -->
-		 TBA
+		 Feb. 9, 18
 	</div>
 </div>
 
@@ -20,7 +20,7 @@
 <div class="unit unit-s-1 unit-m-1-4 unit-l-1-4">
 	<div class="date">
 		<!-- <div class="past">Feb. 15, 2017</div> -->
-		TBA
+		Mar. 1, 2018
 	</div>
 </div>
 
@@ -36,7 +36,7 @@
 <div class="unit unit-s-1 unit-m-1-4 unit-l-1-4">
 	<div class="date">
 		<!-- <div class="past">Mar. 1, 2017</div> -->
-		TBA
+		Apr. 20, 2018
 	</div>
 </div>
 
