--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,7 +71,7 @@
       {% include nav.html %}
         <div class="bg">
           <h1>9<sup>th</sup> International Conference on Environmental<br>Pollution and Remediation (ICEPR'19)</h1>
-          <p class="subhead">August, 2019 | Prague, Czech Republic</p>
+          <p class="subhead">August 18 - 20, 2019 | Prague, Czech Republic</p>
 
           <a href="../papers" class="bg-link">Submissions</a> <p class="dot">&middot;</p> <a href="../dates" class="bg-link">Important Dates</a> <p class="dot">&middot;</p> <a href="../registration" class="bg-link">Registration</a>
 
@@ -98,7 +98,7 @@
 
         <div class="bg">
           <h1>9<sup>th</sup> International Conference on Environmental<br>Pollution and Remediation (ICEPR'19)</h1>
-          <p class="subhead">August, 2019 | Prague, Czech Republic</p>
+          <p class="subhead">August 18 - 20, 2019 | Prague, Czech Republic</p>
 
           <a href="../papers" class="bg-link">Submissions</a> <p class="dot">&middot;</p> <a href="../dates" class="bg-link">Important Dates</a> <p class="dot">&middot;</p> <a href="../registration" class="bg-link">Registration</a>
 
