--- a/_includes/congress-info.html
+++ b/_includes/congress-info.html
@@ -1,4 +1,4 @@
-<p class="body">ICEPR'19 is part of the 5<sup>th</sup> World Congress on 
+<p class="announcement-text">ICEPR'19 is part of the 5<sup>th</sup> World Congress on 
 New Technologies (NewTech'19). 
 <a class="body-link" target="_blank" href="https://www.2019.newtechcongress.com">Congress Website</a> | 
 <a class="body-link" target="_blank" href="/NewTech19_CFP_Flyer.pdf">Congress Flyer</a></p>
